--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!-- Brand/logo -->
   <a class="navbar-brand" href="index.html">
-     <img src="C:/Users/DELL/Desktop/web 2/2.png" style="width:90px;">
+     <img src="2.png" style="width:90px;">
   </a>
   
   <!-- Links -->
@@ -87,7 +87,7 @@
 <!--Carousel 1 -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="C:/Users/DELL/Desktop/web 2/20.png" width="1300" height="700">
+      <img src="20.png" width="1300" height="700">
       <div class="carousel-caption">
         <h1 style="color: orange; font-size: 150%;"><b>Welcome to A little leaf!</h1></b>
         <h3 style="font-size:100%">~ We hope that you can find cute things here ~</h3>
@@ -96,7 +96,7 @@
 
 <!--Carousel 2 -->
     <div class="carousel-item">
-      <img src="C:/Users/DELL/Desktop/web 2/22.png" width="1300" height="700">
+      <img src="22.png" width="1300" height="700">
       <div class="carousel-caption">
         <h1 style="color:orange ; font-size: 150%;"><b>Sweet time!</h1></b>
         <h3 style="font-size:100%">~ Cute small gifts are waiting for you ~</h3>
@@ -106,7 +106,7 @@
 
 <!--Carousel 3 -->
     <div class="carousel-item">
-      <img src="C:/Users/DELL/Desktop/web 2/21.png" width="1300" height="700">
+      <img src="21.png" width="1300" height="700">
       <div class="carousel-caption">
         <h1 style="color: orange; font-size: 150%"><b>Be comfortable...</h1></b>
         <h3 style="font-size: 100%;">~ We will give the best for you ~</h3>
