--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <div class="row"> <!-- First row-->
 
       <div class="col"> <!-- First column-->
-      <img src="C:/Users/DELL/Desktop/web 2/5.jpg" width="250" height="250">
+      <img src="5.jpg" width="250" height="250">
       <br> 
       <br>
       <p style="color: olive;"> Golden Pear Bowl</p>
@@ -147,7 +147,7 @@
       </div>
 
       <div class="col">   <!-- Second column-->
-        <img src="C:/Users/DELL/Desktop/web 2/6.jpg" width="250" height="250">
+        <img src="6.jpg" width="250" height="250">
         <br>
         <br>
         <p style="color: olive;"> Vintage Ceramic Egg Tray </p>
@@ -155,7 +155,7 @@
       </div>
 
       <div class="col">   <!-- Third column-->
-        <img src="C:/Users/DELL/Desktop/web 2/7.jpg" width="250" height="250">
+        <img src="7.jpg" width="250" height="250">
         <br>
         <br>
         <p style="color: olive;"> Fork Spoon </p>
@@ -163,7 +163,7 @@
       </div>
 
       <div class="col">   <!-- Third column-->
-        <img src="C:/Users/DELL/Desktop/web 2/8.jpg" width="250" height="250">
+        <img src="8.jpg" width="250" height="250">
         <br>
         <br>
         <p style="color: olive;"> Bowl, Orange Plate </p>
@@ -178,7 +178,7 @@
     <div class="row"> <!-- First row-->
 
       <div class="col"> <!-- First column-->
-      <img src="C:/Users/DELL/Desktop/web 2/11.jpg" width="350" height="350">
+      <img src="11.jpg" width="350" height="350">
       <br> 
       <br>
       <button type="button" class="btn btn-light">SEE MORE</button>
@@ -187,7 +187,7 @@
       </div>
 
       <div class="col">   <!-- Second column-->
-        <img src="C:/Users/DELL/Desktop/web 2/12.jpg" width="350" height="350">
+        <img src="12.jpg" width="350" height="350">
         <br>
         <br>
         <button type="button" class="btn btn-light">SEE MORE</button>
@@ -196,7 +196,7 @@
       </div>
 
       <div class="col">   <!-- Third column-->
-        <img src="C:/Users/DELL/Desktop/web 2/13.jpg" width="350" height="350">
+        <img src="13.jpg" width="350" height="350">
         <br>
         <br>
         <button type="button" class="btn btn-light">SEE MORE</button>
@@ -233,7 +233,7 @@
         <h4 text align="left">Introduce</h4>
         <p text align="left">A Little Leaf Love's Grocery: for the corners you love in a place called "Home".</p>
         <br>
-        <img src="C:/Users/DELL/Desktop/web 2/2.2.png" style="width:180px;" text align="left" >
+        <img src="2.2.png" style="width:180px;" text align="left" >
       </div>
 
       <div class="col">
