--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
 
   <!-- Brand/logo -->
   <a class="navbar-brand" href="index.html">
-     <img src="C:/Users/DELL/Desktop/web 2/2.png" style="width:90px;">
+     <img src="2.png" style="width:90px;">
   </a>
   
   <!-- Links -->
@@ -170,7 +170,7 @@ h1 {
   <div class="row">
     <div class="column" >
       <div class="content">
-      <img src="C:/Users/DELL/Desktop/web 2/15.jpg" style="width:100%">
+      <img src="15.jpg" style="width:100%">
       <br><br>
       <h4> Vegetable Crush Plate</h4>
       <p>200.000đ</p>
@@ -179,7 +179,7 @@ h1 {
 
   <div class="column">
     <div class="content">
-      <img src=" C:/Users/DELL/Desktop/web 2/16.jpg" style="width:100%">
+      <img src=" 16.jpg" style="width:100%">
       <br><br>
       <h4> Sticky White Chopsticks</h4>
       <p>300.000đ</p>
@@ -188,7 +188,7 @@ h1 {
 
   <div class="column">
     <div class="content">
-      <img src="C:/Users/DELL/Desktop/web 2/12.jpg" style="width:100%">
+      <img src="12.jpg" style="width:100%">
       <br><br>
       <h4> Japanese Style Paper Box</h4>
       <p>560.000đ</p>
@@ -197,7 +197,7 @@ h1 {
 
   <div class="column">
     <div class="content">
-      <img src="C:/Users/DELL/Desktop/web 2/17.jpg" style="width:100%">
+      <img src="17.jpg" style="width:100%">
       <br><br>
       <h4> Stikcing the Glass Wand</h4>
       <p>280.000đ</p>
@@ -206,7 +206,7 @@ h1 {
 
   <div class="column">
     <div class="content">
-      <img src="C:/Users/DELL/Desktop/web 2/11.jpg" style="width:100%">
+      <img src="11.jpg" style="width:100%">
       <br><br>
       <h4> Porcelain Chicken Egg Basket</h4>
       <p>150.000đ</p>
@@ -215,7 +215,7 @@ h1 {
 
   <div class="column">
     <div class="content">
-      <img src="C:/Users/DELL/Desktop/web 2/18.jpg" style="width:100%">
+      <img src="18.jpg" style="width:100%">
       <br><br>
       <h4> Jane Electric Stove</h4>
       <p>240.000đ</p>
@@ -224,7 +224,7 @@ h1 {
 
   <div class="column">
     <div class="content">
-      <img src="C:/Users/DELL/Desktop/web 2/19.jpg" style="width:100%">
+      <img src="19.jpg" style="width:100%">
       <br><br>
       <h4>Duck Wand Stanf</h4>
       <p>395.000đ</p>
@@ -233,7 +233,7 @@ h1 {
 
   <div class="column">
     <div class="content">
-      <img src="C:/Users/DELL/Desktop/web 2/14.jpg" style="width:100%">
+      <img src="14.jpg" style="width:100%">
       <br><br>
       <h4> Cat Washing the Dish</h4>
       <p>175.000đ</p>
@@ -242,7 +242,7 @@ h1 {
 
   <div class="column">
     <div class="content">
-      <img src="C:/Users/DELL/Desktop/web 2/13.jpg" style="width:100%">
+      <img src="13.jpg" style="width:100%">
       <br><br>
       <h4>Honey Bear</h4>
       <p>685.000đ</p>
