--- a/contactus.html
+++ b/contactus.html
@@ -42,7 +42,7 @@
 
   <!-- Brand/logo -->
   <a class="navbar-brand" href="index.html">
-     <img src="C:/Users/DELL/Desktop/web 2/2.png" style="width:90px;">
+     <img src="2.png" style="width:90px;">
   </a>
   
   <!-- Links -->
@@ -100,7 +100,7 @@
         <h4 text align="left">Introduce</h4>
         <p text align="left">A Little Leaf Love's Grocery: for the corners you love in a place called "Home".</p>
         <br>
-        <img src="C:/Users/DELL/Desktop/web 2/2.2.png" style="width:180px;" text align="left" >
+        <img src="2.2.png" style="width:180px;" text align="left" >
       </div>
 
       <div class="col">
