--- a/aboutus.html
+++ b/aboutus.html
@@ -135,7 +135,7 @@
 
   <!-- Brand/logo -->
   <a class="navbar-brand" href="index.html">
-     <img src="C:/Users/DELL/Desktop/web 2/2.png" style="width:90px;">
+     <img src="2.png" style="width:90px;">
   </a>
   
   <!-- Links -->
@@ -177,7 +177,7 @@
 
   <div class="row">
     <div class="col">
-    <img src="C:/Users/DELL/Desktop/web 2/24.jpg" width="550" height="400">
+    <img src="24.jpg" width="550" height="400">
   </div>
 
   <div class="col">
@@ -199,7 +199,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="C:/Users/DELL/Desktop/web 2/26.jpg"  style="width:100%">
+      <img src="26.jpg"  style="width:100%">
       <div class="container">
         <h2>Nau Nau</h2>
         <p class="title" style="color:olive;">Friend</p>
@@ -212,7 +212,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="C:/Users/DELL/Desktop/web 2/25.jpg"  style="width:100%">
+      <img src="25.jpg"  style="width:100%">
       <div class="container">
         <h2>Be With You</h2>
         <p class="title" style="color: olive;">Friend</p>
@@ -225,7 +225,7 @@
 
    <div class="column">
     <div class="card">
-      <img src="C:/Users/DELL/Desktop/web 2/27.jpg"  style="width:100%">
+      <img src="27.jpg"  style="width:100%">
       <div class="container">
         <h2>Nau Nau</h2>
         <p class="title">Designer</p>
@@ -258,7 +258,7 @@
 
 
 <div class="container 3">
-  <img src="C:/Users/DELL/Desktop/web 2/Line 1.png"  style="width:90px">
+  <img src="Line 1.png"  style="width:90px">
   <p><span>Naoko Takeuchi</p>
   <p>I'm so happy. Everything is so cute <3</p>
 </div>
@@ -268,7 +268,7 @@
 
 
 <div class="container 4">
-  <img src="C:/Users/DELL/Desktop/web 2/Line 2.png"  style="width:90px">
+  <img src="Line 2.png"  style="width:90px">
   <p><span >Julieta Suzuki</p>
   <p>We used to cry a lot at A little Leaf, but it's because we're happy to be here!</p>
 </div>
@@ -276,7 +276,7 @@
 <br>
 
 <div class="container 5">
-  <img src="C:/Users/DELL/Desktop/web 2/Line 3.png"  style="width:90px">
+  <img src="Line 3.png"  style="width:90px">
   <p><span >Nhung Aoi</p>
   <p>I can't stop coming here. This place is really amazing. Everything is pleasant and comfortable</p>
 </div>
